--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,6 @@
 name       : retroshare
 version    : 0.6.6
-release    : 16
+release    : 17
 source     :
     - git|https://github.com/RetroShare/RetroShare.git : v0.6.6
 license    : GPL-2.0-or-later
@@ -13,6 +13,7 @@ builddeps  :
     - pkgconfig(Qt5UiTools)
     - pkgconfig(Qt5X11Extras)
     - pkgconfig(RapidJSON)
+    - pkgconfig(bzip2)
     - pkgconfig(gnome-keyring-1)
     - pkgconfig(libavcodec)
     - pkgconfig(libcurl)
@@ -23,7 +24,6 @@ builddeps  :
     - pkgconfig(sqlcipher)
     - pkgconfig(x11)
     - pkgconfig(xscrnsaver)
-    - bzip2-devel
 setup      : |
     %patch -p1 < $pkgfiles/fix_create_directories.patch
     %qmake LIB_DIR=%libdir% CONFIG-=debug CONFIG+=release
